@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/02
+	* Added a check in the walking code when triggering skills.
+	  NPC_SELFDESTRUCTION will no longer cancel walking, it will instead resend
+	  the walk packet, this effectively causes the mob to start walking
+	  (clientside) while the cast-bar is showing. [Skotlex]
 	* Fixed a logic error on battle_get_master which was causing infinite
 	  loops.. [Skotlex]
 	* Fixed homunculus error message [Toms]
